crates/analyzer/tests/snapshots/analysis__revert.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/revert.fe\", &src, module, &db)"

---
note: 
  ┌─ features/revert.fe:2:5
  │
2 │     msg: u256
  │     ^^^^^^^^^ u256
3 │     val: bool
  │     ^^^^^^^^^ bool

note: 
  ┌─ features/revert.fe:6:5
  │
6 │     msg: u256
  │     ^^^^^^^^^ u256
7 │     val: bool
  │     ^^^^^^^^^ bool

note: 
   ┌─ features/revert.fe:10:5
   │
10 │     my_other_error: OtherError
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^ OtherError

note: 
   ┌─ features/revert.fe:12:5
   │  
12 │ ╭     pub fn bar() -> u256:
13 │ │         revert
   │ ╰──────────────^ attributes hash: 17979516652885443340
   │  
   = FunctionSignature {
         self_decl: None,
         params: [],
         return_type: Ok(
             Base(
                 Numeric(
                     U256,
                 ),
             ),
         ),
     }

note: 
   ┌─ features/revert.fe:15:5
   │  
15 │ ╭     pub fn revert_custom_error():
16 │ │         revert Error(msg=1, val=true)
   │ ╰─────────────────────────────────────^ attributes hash: 15148455653558261645
   │  
   = FunctionSignature {
         self_decl: None,
         params: [],
         return_type: Ok(
             Base(
                 Unit,
             ),
         ),
     }

note: 
   ┌─ features/revert.fe:16:26
   │
16 │         revert Error(msg=1, val=true)
   │                          ^      ^^^^ bool: Value => None
   │                          │       
   │                          u256: Value => None

note: 
   ┌─ features/revert.fe:16:16
   │
16 │         revert Error(msg=1, val=true)
   │                ^^^^^^^^^^^^^^^^^^^^^^ Error: Memory => None

note: 
   ┌─ features/revert.fe:16:16
   │
16 │         revert Error(msg=1, val=true)
   │                ^^^^^ attributes hash: 4777426826095316337
   │
   = TypeConstructor {
         typ: Struct(
             Struct {
                 name: "Error",
                 id: StructId(
                     0,
                 ),
                 field_count: 2,
             },
         ),
     }

note: 
   ┌─ features/revert.fe:18:5
   │  
18 │ ╭     pub fn revert_other_error():
19 │ │         revert OtherError(msg=1, val=true)
   │ ╰──────────────────────────────────────────^ attributes hash: 15148455653558261645
   │  
   = FunctionSignature {
         self_decl: None,
         params: [],
         return_type: Ok(
             Base(
                 Unit,
             ),
         ),
     }

note: 
   ┌─ features/revert.fe:19:31
   │
19 │         revert OtherError(msg=1, val=true)
   │                               ^      ^^^^ bool: Value => None
   │                               │       
   │                               u256: Value => None

note: 
   ┌─ features/revert.fe:19:16
   │
19 │         revert OtherError(msg=1, val=true)
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ OtherError: Memory => None

note: 
   ┌─ features/revert.fe:19:16
   │
19 │         revert OtherError(msg=1, val=true)
   │                ^^^^^^^^^^ attributes hash: 5262255621061780991
   │
   = TypeConstructor {
         typ: Struct(
             Struct {
                 name: "OtherError",
                 id: StructId(
                     1,
                 ),
                 field_count: 2,
             },
         ),
     }

note: 
   ┌─ features/revert.fe:21:5
   │  
21 │ ╭     pub fn revert_other_error_from_sto(self):
22 │ │         self.my_other_error = OtherError(msg=1, val=true)
23 │ │         revert self.my_other_error.to_mem()
   │ ╰───────────────────────────────────────────^ attributes hash: 4369441865732737140
   │  
   = FunctionSignature {
         self_decl: Mutable,
         params: [],
         return_type: Ok(
             Base(
                 Unit,
             ),
         ),
     }

note: 
   ┌─ features/revert.fe:22:9
   │
22 │         self.my_other_error = OtherError(msg=1, val=true)
   │         ^^^^^^^^^^^^^^^^^^^                  ^      ^^^^ bool: Value => None
   │         │                                    │       
   │         │                                    u256: Value => None
   │         OtherError: Storage { nonce: Some(0) } => None

note: 
   ┌─ features/revert.fe:22:31
   │
22 │         self.my_other_error = OtherError(msg=1, val=true)
   │                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^ OtherError: Memory => None
23 │         revert self.my_other_error.to_mem()
   │                ^^^^^^^^^^^^^^^^^^^ OtherError: Storage { nonce: Some(0) } => None

note: 
   ┌─ features/revert.fe:23:16
   │
23 │         revert self.my_other_error.to_mem()
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ OtherError: Storage { nonce: Some(0) } => Some(Memory)

note: 
   ┌─ features/revert.fe:22:31
   │
22 │         self.my_other_error = OtherError(msg=1, val=true)
   │                               ^^^^^^^^^^ attributes hash: 5262255621061780991
   │
   = TypeConstructor {
         typ: Struct(
             Struct {
                 name: "OtherError",
                 id: StructId(
                     1,
                 ),
                 field_count: 2,
             },
         ),
     }

note: 
   ┌─ features/revert.fe:23:16
   │
23 │         revert self.my_other_error.to_mem()
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^ attributes hash: 15856680294290209687
   │
   = ValueAttribute


